--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-code-blocks": "^0.1.6",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
+    "swagger-ui-react": "^5.17.14",
     "unplugin-fonts": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/swagger-ui-react": "^4.18.3",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
